fixed courses alignment

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ main {
 }
 
 /* COURSES SECTION */
-.course {
+.courses {
     padding: 6em 1em;
     display: grid;
     justify-content: center
